[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="iRCContainer" type="HSplitContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="chatContainer" type="VBoxContainer" parent="Panel/iRCContainer"]
margin_right = 842.0
margin_bottom = 580.0
size_flags_horizontal = 3

[node name="text" type="RichTextLabel" parent="Panel/iRCContainer/chatContainer"]
margin_right = 842.0
margin_bottom = 552.0
focus_mode = 2
size_flags_vertical = 3
theme = SubResource( 1 )
bbcode_enabled = true
selection_enabled = true

[node name="FieldContainer" type="HBoxContainer" parent="Panel/iRCContainer/chatContainer"]
margin_top = 556.0
margin_right = 842.0
margin_bottom = 580.0

[node name="WhisperLabel" type="Label" parent="Panel/iRCContainer/chatContainer/FieldContainer"]
margin_top = 5.0
margin_bottom = 19.0

[node name="enterLine" type="LineEdit" parent="Panel/iRCContainer/chatContainer/FieldContainer"]
margin_left = 4.0
margin_right = 792.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Panel/iRCContainer/chatContainer/FieldContainer"]
margin_left = 796.0
margin_right = 842.0
margin_bottom = 24.0
text = "SEND"

[node name="UserList" type="ItemList" parent="Panel/iRCContainer"]
margin_left = 854.0
margin_right = 1004.0
margin_bottom = 580.0
rect_min_size = Vector2( 150, 0 )
allow_rmb_select = true

[node name="time_updater" type="Timer" parent="."]
autostart = true

[node name="RMBPopupMenu" type="PopupMenu" parent="."]
margin_left = 14.0
margin_top = 566.0
margin_right = 34.0
margin_bottom = 586.0
rect_min_size = Vector2( 20, 20 )

[connection signal="gui_input" from="Panel/iRCContainer/chatContainer/FieldContainer/enterLine" to="." method="_on_enterLine_gui_input"]
[connection signal="text_entered" from="Panel/iRCContainer/chatContainer/FieldContainer/enterLine" to="." method="_on_enterLine_text_entered"]
[connection signal="pressed" from="Panel/iRCContainer/chatContainer/FieldContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="item_rmb_selected" from="Panel/iRCContainer/UserList" to="." method="_on_UserList_item_rmb_selected"]
[connection signal="timeout" from="time_updater" to="." method="_on_time_updater_timeout"]
[connection signal="id_pressed" from="RMBPopupMenu" to="." method="_on_RMBPopupMenu_id_pressed"]
